# pixelmatch-py

./: .travis.yml  LICENSE  README.md  mypy.ini  pixelmatch.py  pyproject.toml  test_pixelmatch.py
.github/workflows/: publish.yml  test.yml
docs/: API.rst  conf.py  index.rst
pixelmatch/: __init__.py  core.py  types.py  utils.py
pixelmatch/contrib/: PIL.py
