[tool.poetry]
name = "pixelmatch"
version = "0.3.0"
description = "A pixel-level image comparison library."
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/whtsky/pixelmatch-py"
packages = [
    {include = "pixelmatch"},
    {include = "pixelmatch/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
pytest = ">=8.0"
pytest-cov = ">=5.0"
pillow = ">=10.0"
pytest-benchmark = ">=4.0"
pytest-mypy = ">=0.10.3"
mypy = ">=1.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']