[tool.poetry]
name = "pixelmatch"
version = "0.3.1"
description = "A pixel-level image comparison library."
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/whtsky/pixelmatch-py"
packages = [
    {include = "pixelmatch"},
    {include = "pixelmatch/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = ">=26.1.0"
pytest = ">=9.0.2"
pytest-cov = ">=7.0.0"
pillow = ">=10.0"
pytest-benchmark = ">=4.0"
pytest-mypy = ">=1.0.1"
mypy = ">=1.19.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']